@@ -1,43 +1,37 @@
 package strategy;
 
-import application.RouletteContext;
+import application.Context;
 import enums.BetType;
 import enums.Spot;
 import model.Bet;
-import org.apache.commons.collections4.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class Rate_98_48_PercentStrategy extends BaseStrategy {
 
-    public Rate_98_48_PercentStrategy(RouletteContext rouletteContext) {
-        super(rouletteContext);
+    public Rate_98_48_PercentStrategy(Context context) {
+        super(context);
     }
 
     @Override
-    public String getStrategyName() {
+    public String getName() {
         return "98.48パーセント法";
     }
 
     @Override
-    public List<Bet> getNextBetListImpl(RouletteContext rouletteContext) {
+    public List<Bet> getNextInternal(Context context) {
         List<Bet> betList = new ArrayList<>();
-        if (3 <= rouletteContext.spotHistoryList.size()) {
-
-            Spot spot1 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 3);
-            Spot spot2 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 2);
-            Spot spot3 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 1);
-
-            if (spot1.isFirstDozenOrZeroAndDoubleZero() && spot2.isFirstDozenOrZeroAndDoubleZero()
+        if (3 <= context.getSpotHistory().size()) {
+            Spot spot1 = context.getSpotHistory().get(context.getSpotHistory().size() - 3);
+            Spot spot2 = context.getSpotHistory().get(context.getSpotHistory().size() - 2);
+            Spot spot3 = context.getSpotHistory().getLast();
+            if (spot1.isFirstDozenOrZeroAndDoubleZero()
+                    && spot2.isFirstDozenOrZeroAndDoubleZero()
                     && spot3.isFirstDozenOrZeroAndDoubleZero()) {
-                long useBet = rouletteContext.minimumBet;
-
-                if (CollectionUtils.isNotEmpty(lastBetList)) {
-                    useBet = lastBetList.get(0).value * 2;
-                }
-                betList.add(new Bet(BetType.SECOND_DOZEN, useBet));
-                betList.add(new Bet(BetType.THIRD_DOZEN, useBet));
+                long useBet = (lastBets != null && !lastBets.isEmpty()) ? lastBets.getFirst().value() * 2 : context.getMin();
+                betList.add(Bet.builder().type(BetType.SECOND_DOZEN).value(useBet).build());
+                betList.add(Bet.builder().type(BetType.THIRD_DOZEN).value(useBet).build());
             }
         }
         return betList;
