@@ -1,6 +1,6 @@
 package strategy;
 
-import application.RouletteContext;
+import application.Context;
 import enums.BetType;
 import enums.Spot;
 import model.Bet;
@@ -10,29 +10,29 @@ import java.util.List;
 
 public class Rate_99_46_PercentStrategy extends BaseStrategy {
 
-    public Rate_99_46_PercentStrategy(RouletteContext rouletteContext) {
-        super(rouletteContext);
+    public Rate_99_46_PercentStrategy(Context context) {
+        super(context);
     }
 
     @Override
-    public String getStrategyName() {
+    public String getName() {
         return "99.46パーセント法";
     }
 
     @Override
-    public List<Bet> getNextBetListImpl(RouletteContext rouletteContext) {
+    public List<Bet> getNextInternal(Context context) {
         List<Bet> betList = new ArrayList<>();
-        if (4 <= rouletteContext.spotHistoryList.size()) {
-
-            Spot spot1 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 4);
-            Spot spot2 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 3);
-            Spot spot3 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 2);
-            Spot spot4 = rouletteContext.spotHistoryList.get(rouletteContext.spotHistoryList.size() - 1);
-
-            if (spot1.isFirstDozenOrZeroAndDoubleZero() && spot2.isFirstDozenOrZeroAndDoubleZero()
-                    && spot3.isFirstDozenOrZeroAndDoubleZero() && spot4.isFirstDozenOrZeroAndDoubleZero()) {
-                betList.add(new Bet(BetType.SECOND_DOZEN, rouletteContext.minimumBet));
-                betList.add(new Bet(BetType.THIRD_DOZEN, rouletteContext.minimumBet));
+        if (4 <= context.getSpotHistory().size()) {
+            Spot spot1 = context.getSpotHistory().get(context.getSpotHistory().size() - 4);
+            Spot spot2 = context.getSpotHistory().get(context.getSpotHistory().size() - 3);
+            Spot spot3 = context.getSpotHistory().get(context.getSpotHistory().size() - 2);
+            Spot spot4 = context.getSpotHistory().getLast();
+            if (spot1.isFirstDozenOrZeroAndDoubleZero()
+                    && spot2.isFirstDozenOrZeroAndDoubleZero()
+                    && spot3.isFirstDozenOrZeroAndDoubleZero()
+                    && spot4.isFirstDozenOrZeroAndDoubleZero()) {
+                betList.add(Bet.builder().type(BetType.SECOND_DOZEN).value(context.getMin()).build());
+                betList.add(Bet.builder().type(BetType.THIRD_DOZEN).value(context.getMin()).build());
             }
         }
         return betList;
